# py-http-log-parser

./: README.md  pyproject.toml
.github/workflows/: upload-to-pypi.yml
http_log_parser/: __init__.py  __main__.py  _entry_point.py  nginx_parser.py
tests/: test_nginx_parser.py
